[package]
name = "pinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "*", features = ["ws"]}
tokio = {version = "*", features = ["full"]}
tower-http = {version = "*", features = ["fs"]}
uuid = {version = "*", features = ["macro-diagnostics"]}
serde = {version = "*", features = ["derive"]}
serde_json = {version = "*"}